--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-.overAll{
-  display: grid;
-  grid-template-areas:"header header header"
-  "name image actions";
-  width: 100%;
-  max-height: 300px;
-}
 .overAll-hide{
   filter: blur(3px) grayscale(1) opacity(0.5);  
 }
@@ -52,22 +45,14 @@
   margin-top: 20px;
 }
 
-.details{
-  display: grid;
-  grid-template-areas: "title close"
-  "imageDetails imageDetails"
-  "abilities abilities";
-  border: 3px solid #000;
-  text-align: center;
-  width: 30%;
-  position: absolute;
+.Card{
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  display: none;
+  /* display: none; */
   z-index: 50;
-  background: #fff;
-  min-width: 250px;
+  
 }
 .details .title{
   grid-area: title;
